array delete and search

--- a/2.array_insert.html
+++ b/2.array_insert.html
@@ -44,7 +44,7 @@
   // }
 
   const insertEl = () => {
-    data = [10, 20, 30, 40, 50];
+    data = data;
     console.log(data);
     newEl = document.getElementById("newEl").value;
     newEl = parseInt(newEl);
