--- a/5array_merge.html
+++ b/5array_merge.html
@@ -13,6 +13,7 @@
 
     <p>REVERSE  --------------  data.reverse()</p>
     <p>MERGE  --------------  bag = [...data1, ...data2]</p>
+    <p>(Spread Operator)</p>
     
   </body>
 </html>
